--- a/styles/content/_categoryPage.scss
+++ b/styles/content/_categoryPage.scss
@@ -21,7 +21,8 @@
 
         // position: fixed;
         z-index: 100;
-        right: 0;
+        // right: 0;
+        margin: 0 auto;
         transform: translateX(-5%);
 
         .breadcrumb {
