--- a/styles/main.css
+++ b/styles/main.css
@@ -1122,7 +1122,7 @@ html {
   background-color: #f5f4f2;
   width: 90%;
   z-index: 100;
-  right: 0;
+  margin: 0 auto;
   transform: translateX(-5%);
 }
 .categoryPage .breadcrumb-container .breadcrumb {
